[package]
name = "open_depacker"
version = "0.2.2"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2021"

[build-dependencies]
cc = "1.0"
walkdir = "2"

[dependencies]
cfixed-string = "1.0"
byteorder = "1"
# musashi = { path = "musashi" }
clap = { version = "3.1.7", features = ["derive"] }
delharc = "0.4"
rayon = "1.5"
walkdir = "2"
